css/style.css
:root {
  --color-primary: #8298fa;
  --color-secondary: #fff;
  --color-black: #000;
  --color-back: linear-gradient(
    0deg,
    rgba(130, 152, 250, 1) 23%,
    rgba(0, 0, 0, 1) 78%
  );
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-family: "Roboto", sans-serif;
  overflow-x: hidden;
}
.container {
  width: 1140px;
  margin: 0 auto;
}
h1 {
  color: var(--color-primary);
  font-family: "Rubik Bubbles", system-ui;
  font-weight: 400;
  font-style: normal;
  font-size: 7rem;
  text-transform: uppercase;
}
h2 {
  color: var(--color-secondary);
  font-size: 4rem;
  text-align: center;
  font-family: "Russo One", sans-serif;
  font-weight: 400;
}
h3 {
  font-size: 2rem;
  font-weight: 500;
  color: var(--color-black);
  font-family: "Roboto", sans-serif;
}
h4 {
  font-size: 1.5rem;
  color: var(--color-secondary);
  font-family: "Russo One", sans-serif;
}

p {
  font-family: "Roboto", sans-serif;
  font-weight: 200;
  font-style: normal;
  font-size: 1.5rem;
  color: var(--color-secondary);
}
@media screen and (max-width: 1024px) {
  h1 {
    font-size: 5rem;
  }
  h2 {
    font-size: 5rem;
  }
  h3 {
    font-size: 2rem;
  }
  p {
    font-size: 2rem;
  }
}
/*Nav */
nav {
  display: flex;
  background-color: var(--color-primary);
  justify-content: space-between;
  align-items: center;
  padding: 10px 30px;
  position: relative;
}
.logo {
  display: inline-flex;
  position: relative;
}
.logo img {
  width: 60px;
  height: 60px;
}
.logo img:hover {
  transform: rotate(90deg);
}
.toggle-button {
  display: none;
  flex-direction: column;
  cursor: pointer;
}
.toggle-button .bar {
  width: 35px;
  height: 4px;
  border-radius: 5px;
  background-color: var(--color-secondary);
  margin: 3px 0px;
}
.nav-list {
  list-style: none;
  display: flex;
}
.nav-list .nav__item {
  margin-right: 35px;
}
.nav-list .nav__item a {
  font-size: 18px;
  color: var(--color-secondary);
  text-decoration: none;
  text-transform: uppercase;
  transition: 0.5s ease;
}
.nav-list .nav__item a:hover {
  background-color: rgba(0, 0, 0, 1);
}

@media screen and (max-width: 768px) {
  nav {
    padding: 20px 25px;
  }
  .toggle-button {
    display: flex;
  }
  .nav-list {
    display: none;
    flex-direction: column;
    position: absolute;
    width: 100%;
    background-color: black;
    padding: 25px;
    top: 100%;
    left: 0;
    text-align: center;
  }
  .nav-list .nav__item {
    padding: 20px 0px;
  }
  .nav-list.active {
    display: flex;
  }
}
/* About */
.about {
  background: var(--color-back);
}
.about--container {
  padding: 7rem 0;
  text-align: center;
}
.about-brand {
  font-size: 3rem;
  font-weight: 400;
  color: var(--color-secondary);
  font-family: "Roboto", sans-serif;
}
.about-heading {
  margin: 2rem;
}
.text-container {
  width: 100%;
  max-width: 900px;
  line-height: 1.5;
  text-align: center;
  margin: 0 auto;
}
.icon-momss {
  text-align: center;
  padding: 2rem;
}
.icon {
  width: 200px;
  height: 200px;
  padding: 20px;
  box-shadow: inset 0 -3em 3em rgba(135, 72, 218, 0.3), 0 0 0 2px white,
    0.3em 0.3em 1em rgba(246, 247, 244, 0.6);
}
@media screen and (max-width: 768px) {
  .about {
    padding: 1rem;
  }

  .about-brand {
    font-size: 1rem;
  }
  .about-heading {
    font-size: 3rem;
  }
  .text-container {
    font-size: 1rem;
  }
}

/* Cards */
.card {
  background: var(--color-back);
  padding: 5rem 0;
  overflow-x: hidden;
}
.card-header {
  text-align: center;
  padding-bottom: 4rem;
}
.card-container {
  margin-bottom: 3rem;
  width: 100%;
}
.card-container-border {
  width: 50%;
  height: 200px;
  background-color: var(--color-primary);
  border-radius: 0px 30px 0px 30px;
  border-style: solid;
  border-width: 1px 1px 1px 1px;
  border-color: var(--color-secondary);
  box-shadow: 0px 0px 10px 0px var(--color-black);
  margin: 0 auto;
  transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
}
.grid-1x2 {
  display: grid;
  width: 100%;
  height: 100%;
  padding: 2rem;
  grid-template-columns: 1fr 4fr;
}
.card-image {
  margin-top: 1rem;
}
.card-icon {
  width: 100px;
  height: 100px;
}
.card-content {
  margin: 1rem;
}
.card--heading {
  font-size: 1.5rem;
  font-weight: 600;
  margin-bottom: 2rem;
  letter-spacing: 2.5px;
}
.card--paragrafh {
  font-size: 1rem;
  font-weight: 300;
  letter-spacing: 2px;
  text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
}
@media screen and (max-width: 1040px) {
  .card-container-border {
    width: 50%;
    height: 250px;
  }
}
@media (max-width: 768px) {
  .card {
    padding: 1rem;
  }
  .card-header {
    font-size: 3rem;
    padding-top: 2rem;
  }
  .card-container-border {
    width: 100%;
    height: 400px;
  }
  .grid-1x2 {
    grid-template-columns: 1fr;
    text-align: center;
    padding-top: 1rem;
  }
  .card--heading {
    font-size: 1.7rem;
    padding-top: 2rem;
  }
  .card--paragrafh {
    font-size: 1rem;
    padding-top: 1.5rem;
  }
}

/* Buttons */
.btn-container {
  align-items: center;
  padding: 2rem;
  text-align: center;
  width: 100%;
}
.btn-container a {
  background-color: var(--color-black);
  font-size: 2rem;
  font-style: italic;
  font-weight: 500;
  padding: 1rem 3rem;
  text-align: center;
  color: var(--color-secondary);
}

.btn-container a:hover {
  font-size: 2.5rem;
}
@media screen and (max-width: 768px) {
  .btn-container {
    margin-bottom: 2rem;
  }
}
/* Tokenomics */
.launch {
  background-color: var(--color-secondary);
  text-align: center;
}

.grid--1x2 {
  display: grid;
  grid-template-columns: 1fr 1fr;
}
.launch-image > img {
  width: 100%;
  height: 100%;
}

.launch-text {
  margin: 3rem 0;
  padding: 3rem 0;
}
.toke-token {
  color: var(--color-black);
  margin-bottom: 2rem;
}
.launch-list {
  line-height: 2;
}
.launch__list {
  font-size: 2rem;
  font-weight: 300;
  color: var(--color-black);
  list-style: none;
}
.toke-supply {
  color: var(--color-black);
  font-size: 2rem;
  font-family: "Courier New", Courier, monospace;
  margin: 3rem;
}
.launch-contract {
  font-size: 2rem;
  letter-spacing: 2px;
  margin: 2rem;
  color: var(--color-black);
}
.launch-number {
  color: var(--color-black);
  font-size: 1.5rem;
}
@media screen and (max-width: 1024px) {
  .grid--1x2 {
    grid-template-columns: 1fr;
  }
}
@media screen and (max-width: 768px) {
  .grid--1x2 {
    grid-template-columns: 1fr;
  }
  .toke-token {
    font-size: 2rem;
    letter-spacing: 2px;
  }
  .launch__list {
    font-size: 1rem;
  }
  .toke-supply {
    font-size: 1rem;
  }
  .launch-contract {
    font-size: 1rem;
  }
  .launch-text {
    margin: 0;
    padding: 2rem 0;
  }
  .launch-number {
    font-size: 10px;
  }
}

/* Foundation */
.foundation {
  background-color: var(--color-black);
  color: var(--color-secondary);
  margin: 0 auto;
  padding: 2rem;
}
.foundation-header1 {
  margin: 3rem 0;
}
.foundation-container {
  border: 1px solid var(--color-primary);
  width: 700px;
  text-align: center;
}
.foundation-header {
  margin: 1rem;
}
.foundation-info {
  border: 1px solid var(--color-primary);
}
.foundation-heading {
  color: var(--color-primary);
  font-family: "helvetica", sans-serif;
  font-size: 2rem;
  font-weight: 700;
  padding-bottom: 2rem;
}
.foundation-social {
  color: var(--color-primary);
  font-size: 1.5rem;
  font-weight: 500;
  letter-spacing: 1px;
  margin-bottom: 1rem;
}
.foundation-paragrafer {
  margin-bottom: 2rem;
  font-size: 1.3rem;
}
@media screen and (max-width: 768px) {
  .foundation-header1 {
    font-size: 3rem;
  }
  .foundation-container {
    width: 100%;
    padding: 0;
  }
  .foundation-heading {
    font-size: 2rem;
  }
  .foundation-info {
    padding: 0;
  }
}

/* Footer */
footer {
  background: rgb(130, 152, 250);
  background: linear-gradient(
    0deg,
    rgba(130, 152, 250, 1) 23%,
    rgba(0, 0, 0, 1) 78%
  );
}
.footer__section {
  text-align: center;
  padding: 5rem 3rem;
}
.footer-join {
  margin-bottom: 3rem;
}
.footer--header {
  color: var(--color-primary);
  font-size: 4rem;
  font-family: "Rubik Bubbles", system-ui;
  margin-bottom: 3rem;
}
.footer-icon {
  font-size: 50px;
  margin: 2rem;
  margin-bottom: 4rem;
}
.footer-text {
  font-size: 1.3rem;
  color: var(--color-secondary);
  font-weight: 200;
  background-color: var(--color-black);
}
@media screen and (max-width: 768px) {
  .footer__section {
    padding: 1rem;
  }
  .footer--header {
    font-size: 2rem;
  }
  .footer-text {
    font-size: 1rem;
  }
}

